--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@nuxtjs/color-mode": "^3.4.0",
+    "@nuxtjs/google-fonts": "^3.2.0",
     "vue-fontawesome": "^0.0.2"
   }
 }
