--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia/nuxt": "^0.5.1",
     "install": "^0.13.0",
+    "marked": "^12.0.2",
     "nuxt": "^3.11.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
